--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "@here/maps-api-for-javascript": "^1.35.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
-    "expo": "~46.0.16",
-    "expo-location": "^14.3.0",
-    "expo-screen-orientation": "^4.3.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-sqlite": "~10.3.0",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.6",
+    "expo": "^49.0.0",
+    "expo-location": "~16.1.0",
+    "expo-screen-orientation": "~6.0.6",
+    "expo-splash-screen": "~0.20.5",
+    "expo-sqlite": "~11.3.3",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
     "prop-types": "^15.8.1",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-maps": "0.31.1",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-webview": "11.23.0",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "redux-devtools-extension": "^2.13.8"
   },
   "private": true
